# perfusio

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  README.md  coverage.xml  environment.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile
docs/source/: choosing-acquisition.md  comparison-with-datahowlab.md  conf.py  getting-started.md  index.rst  limitations.md  refs.bib  regulatory-considerations.md
docs/source/apidocs/: index.rst
docs/source/theory/: bed.md  metrics.md  model.md
docs/source/tutorials/: T01-simulate.md  T02-hybrid-gp.md  T03-bed.md  T04-multiobjective.md  T05-transfer.md  T06-digital-twin.md  T07-real-ambr.md
examples/: 01_simulate_training_experiment.py  02_fit_hybrid_gp_model.py  03_bayesian_experimental_design.py  04_multiobjective_bed.py  05_entity_embedding_transfer.py  06_online_digital_twin_filesystem.py  07_real_ambr_opcua.py  reproduce_paper_figures.py
outreach/: announcement_email_to_authors.md  linkedin_post.md
outreach/preprint/: perfusio_preprint.md
src/perfusio/: __init__.py  _typing.py  cli.py  config.py  states.py
src/perfusio/bed/: __init__.py  acquisitions.py  objectives.py  pareto.py  policies.py  search.py
src/perfusio/chemistry/: __init__.py  balances.py  species.py  volumes.py
src/perfusio/connectors/: __init__.py  ambr250_emulator.py  base.py  filesystem.py  opcua_client.py  sql_store.py
src/perfusio/embedding/: __init__.py  clones.py  transfer.py
src/perfusio/gp/: __init__.py  ensemble.py  exact_gp.py  kernels.py  means.py  stepwise.py
src/perfusio/hybrid/: __init__.py  forecast.py  model.py  train.py
src/perfusio/mechanistic/: __init__.py  integrators.py  kinetics.py  models.py
src/perfusio/metrics/: __init__.py  coverage.py  multiobjective.py  rrmse.py
src/perfusio/simulator/: __init__.py  cho_perfusion.py  doe.py  noise.py
src/perfusio/twin/: __init__.py  audit.py  digital_twin.py  notifications.py  scheduler.py
src/perfusio/viz/: __init__.py  interactive.py  pareto_explorer.py  static.py  theme.py
src/perfusio/viz/dashboard/: app.py
tests/: conftest.py
tests/integration/: test_virtual_ambr.py
tests/snapshots/: test_figure_snapshots.py
tests/unit/: test_bed.py  test_chemistry.py  test_gp.py  test_metrics.py  test_properties.py
