[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfusio"
version = "0.1.0"
description = "Open reference implementation of self-driving perfusion bioprocess development (Gadiyar et al., 2026)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "perfusio Contributors" },
]
keywords = [
    "bioprocess",
    "perfusion",
    "gaussian-process",
    "bayesian-optimization",
    "digital-twin",
    "CHO",
    "mAb",
    "self-driving-labs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Core ML / GP
    "torch>=2.2,<3.0",
    "gpytorch>=1.11,<2.0",
    "botorch>=0.10,<1.0",
    "linear_operator>=0.5,<1.0",
    # Scientific computing
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "pandas>=2.2,<3.0",
    # Data validation and settings
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # Visualisation
    "matplotlib>=3.8,<4.0",
    "plotly>=5.20,<6.0",
    "dash>=2.16,<3.0",
    "dash-bootstrap-components>=1.5,<2.0",
    "cmocean>=4.0,<5.0",
    # Hardware connectors
    "asyncua>=1.1,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    # File I/O
    "pyarrow>=15.0,<20.0",
    "openpyxl>=3.1,<4.0",
    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    # Utilities
    "tqdm>=4.66,<5.0",
    "humanize>=4.9,<5.0",
    "structlog>=24.1,<25.0",
    "tenacity>=8.2,<9.0",
    "cryptography>=42.0,<44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-mpl>=0.17",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "mypy>=1.9",
    "pyright>=1.1.360",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "codespell>=2.2",
    "nbstripout>=0.7",
    "jupytext>=1.16",
    "ipykernel>=6.29",
]
docs = [
    "sphinx>=7.3",
    "myst-parser>=3.0",
    "sphinx-autodoc2>=0.5",
    "sphinx-gallery>=0.16",
    "myst-nb>=1.1",
    "pydata-sphinx-theme>=0.15",
    "sphinxcontrib-bibtex>=2.6",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/perfusio-org/perfusio"
Documentation = "https://perfusio.readthedocs.io"
Repository = "https://github.com/perfusio-org/perfusio"
"Bug Tracker" = "https://github.com/perfusio-org/perfusio/issues"

[project.scripts]
perfusio = "perfusio.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/perfusio"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "examples/",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "CHANGELOG.md",
    "LIMITATIONS.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "D", "ANN", "PT", "NPY", "PD"]
ignore = [
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "ANN401", # Allow Any in _typing.py
    "PD901",  # df is a bad variable name — too strict for scientific code
]
per-file-ignores = { "src/perfusio/_typing.py" = ["ANN401"] }

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["perfusio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "gpytorch.*",
    "botorch.*",
    "linear_operator.*",
    "asyncua.*",
    "cmocean.*",
    "scipy.*",
    "matplotlib.*",
    "plotly.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "alembic.*",
    "structlog.*",
    "tenacity.*",
    "humanize.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=perfusio",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests requiring real hardware",
    "gpu: marks tests requiring a CUDA GPU",
    "figures: marks snapshot figure tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::UserWarning:torch",
    "ignore::DeprecationWarning:torch",
    "ignore::DeprecationWarning:linear_operator",
    "ignore::UserWarning:linear_operator",
    "ignore::UserWarning:gpytorch",
    "ignore::botorch.exceptions.warnings.NumericsWarning",
]

[tool.coverage.run]
source = ["src/perfusio"]
branch = true
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
fail_under = 92
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
